css/style.css
#navBrand {
    padding-left: 5%;
}

#navBar {
    background-color: #00695c;
}

#home {
    height: 100vh;
    padding-top: 15%;
    padding-bottom: 10%;
    text-align: center;
    background: url('http://babalucas.com/wp-content/uploads/babalucas_background_2a.jpg') no-repeat center center fixed;
    background-size: cover;
}

#devIntro {
    padding-top: 1%;
    color: #ffffff;
    font-family: 'Playfair Display SC', serif;
}

#devName {
    padding-top: 1%;
    color: #ffffff;
    font-family: 'Playfair Display SC', serif;
}

#devDesc {
    color: #ffffff;
    font-size: 2em;
}

#aboutMe {
    width: 100%;
    height: 100%;
    background: url('http://dpi.az/images/black_bg.jpg') no-repeat center center fixed;
    background-size: cover;
    opacity: 0.8;
}

#aboutMebg {
    height: 100vh;
}

#summaryHead {
    color: #fafafa;
    font-family: "Roboto", sans-serif;
    font-size: 4em;
    font-weight: 900;
}

#summaryContent {
    color: #ffffff;
    font-family: 'Droid Serif', Serif;
    font-size: 18px;
    font-weight: 400;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1 0 auto;
}

#footer {
    background-color: #00695c;
}

.parallax-container {
    height: 500px;
}

.btnWidth {
    width: 70px
}

@media only screen and (max-width: 500px) {
    .col.s8.m4.card {
        width: 95vw;
    }
}

